# jetcobot

./: .gitignore
april_tag_detect/scripts/: april_tag_node.py
bronze_bringup/: camera_state_switcher.py  package.xml  setup.cfg  setup.py
bronze_bringup/bronze_bringup/: camera_state_switcher.py  gripper_feedback_publisher.py
bronze_bringup/resource/: bronze_bringup
bronze_description/: CMakeLists.txt  package.xml
bronze_moveit_config/: CMakeLists.txt  package.xml
bronze_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bronze_moveit_picker/: CMakeLists.txt  package.xml
bronze_moveit_picker/include/bronze_moveit_picker/: tag_picker.hpp
bronze_moveit_picker/launch/: box_collision_test.launch.py  moveit_mover.launch.py  pick_and_place.launch.py
bronze_moveit_picker/src/: tag_picker.cpp  tag_picker_BoxCollision.cpp  tag_picker_to_find_best_pose.cpp
jetcobot_moveit_picker/src/: tag_picker.cpp
